--- a/mpc_stochastic.ipynb
+++ b/mpc_stochastic.ipynb
@@ -490,6 +490,27 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "5903621b",
+   "metadata": {},
+   "source": [
+    "# Objective Function Construction \n",
+    "\n",
+    "The code below constructs the objective function, which is as follows:\n",
+    "\n",
+    "$$\n",
+    "     \\mathbb E\\left\\{ \\int_0^\\infty \\exp(-\\delta t) \\left[-P^e  \\left (\\kappa\\sum_{i=1}^I Z^i_t- \\sum_{i=1}^I \\dot X^i_t \\right)+  P^a_t  \\sum_i \\theta^i Z^i_t-\\frac \\zeta 2 \\left (\\sum_i U_t^i + V_t^i \\right)^2 \\right ] dt\\right\\}  \n",
+    "$$\n",
+    "\n",
+    "Due to the discretization, the above reduces to:\n",
+    "\n",
+    "$$\n",
+    "     \\mathbb E\\left\\{ \\sum_0^T \\exp(-\\delta t) \\left[-P^e  \\left (\\kappa\\sum_{i=1}^I Z^i_t- \\sum_{i=1}^I \\dot X^i_t \\right)+  P^a_t  \\sum_i \\theta^i Z^i_t-\\frac \\zeta 2 \\left (\\sum_i U_t^i + V_t^i \\right)^2 \\right ] dt\\right\\}  \n",
+    "$$\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "e8b09f36",
    "metadata": {},
    "source": [
